--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 
 <html>
 <head>
-
   <link rel="stylesheet" href="style.css">	
 </head>
 	<title>yooo</title>
 	<body>
-		<div class="main">
+		<header>
+			<div id="logo"></div>
+			<h1>Rusty Takes a Bath</h1>
+			<p><a href="https://www.instagram.com/p/4psIwgRyTjPSCwA1y1bnvoHByy58eCdrCcqo80/" target="_blank">By Rusty</a></p>
+		</header>
+		<main>
 			<p>Lorem ipsum dolor sit amet, cibo mollis ex mea, eu est putent vituperatoribus, et eripuit equidem vel. Sed ei dicam repudiare, quo elitr admodum appellantur ne. Usu te saepe labore quodsi, ex vis volumus omnesque delicata. Illum fabulas ocurreret pri an. Nec ex duis iuvaret sensibus, id mel consul scriptorem, mel falli munere torquatos cu.</p>
 
 			<p>Eu veniam iuvaret consectetuer quo, ne qui mazim adversarium. Audire indoctum dignissim est ea, nobis iisque ad eum. An mei clita mnesarchum repudiandae. An adhuc intellegam has, id aeque exerci facilis per. Pri harum legimus an. In mea posse incorrupte, qui eu elitr signiferumque. Cu pri vide duis saepe, id vis dicta definitionem, ullum tamquam cu cum.</p>
 
-			<p>At alia primis postea vis, esse audire cu per, putent petentium et nam. Eam id graece inermis, ne vim inermis atomorum, te nam esse lucilius. Ad pro harum fuisset, mundi animal patrioque te sit. Nullam gubergren te vim. Id has nonumy discere minimum. Minimum convenire et has.</p>	
-		</div>
+			<p>At alia primis postea vis, esse audire cu per, putent petentium et nam. Eam id graece inermis, ne vim inermis atomorum, te nam esse lucilius. Ad pro harum fuisset, mundi animal patrioque te sit. Nullam gubergren te vim. Id has nonumy discere minimum. Minimum convenire et has.</p>
+		</main>	
 	</body>
 </html>
