--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">	
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+  <script src="script.js"></script>
 </head>
 	<title>yooo</title>
 	<body>
 		<header>
 			<div id="logo"></div>
-			<h1>Rusty Takes a Bath</h1>
+			<h1 id="header-title">Rusty Takes a Bath</h1>
 			<p><a href="https://www.instagram.com/p/4psIwgRyTjPSCwA1y1bnvoHByy58eCdrCcqo80/" target="_blank">By Rusty</a></p>
 		</header>
 		<main>
