added jQuery that changes the h1 on click

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<div id="logo"></div>
 			<h1 id="header-title">Rusty Takes a Bath</h1>
-			<p><a href="https://www.instagram.com/p/4psIwgRyTjPSCwA1y1bnvoHByy58eCdrCcqo80/" target="_blank">By Rusty</a></p>
+			<p><a id="button">By Rusty</a></p>
 		</header>
 		<main>
 			<p>Lorem ipsum dolor sit amet, cibo mollis ex mea, eu est putent vituperatoribus, et eripuit equidem vel. Sed ei dicam repudiare, quo elitr admodum appellantur ne. Usu te saepe labore quodsi, ex vis volumus omnesque delicata. Illum fabulas ocurreret pri an. Nec ex duis iuvaret sensibus, id mel consul scriptorem, mel falli munere torquatos cu.</p>
